# agent-system-coding

./: .gitignore  AGENTS.md  README.md  draft.txt  package-lock.json  package.json  pyproject.toml
.agent_cache/: implementation_plan.md  refactor_plan.md
.agents/skills/auto-work-toolbox/: SKILL.md
.agents/skills/codex-session-markdown/: SKILL.md
.agents/skills/drawio-arch-diagram-cli/: SKILL.md
.agents/skills/modular-arch/: SKILL.md  (+1 more)
docs/: modular_arch.db  session_log.db  workspace_docs.db
docs/architecture/: agent-system-coding-architecture.md  agent-system-coding-overview.drawio
docs/plan/: README.md  api-contract.md  backend-refactor.md  demo.md  frontend-refactor.md  mvp.md
docs/session-logs/: 20260314-1a1d9bd2.md  20260314-207b402c.md  20260314-2f971f16.md  20260314-31dfb200.md  20260314-351c9ae8.md  20260314-39fe6cab.md  20260314-3f781570.md  20260314-4b352b4f.md  20260314-4d9dc841.md  20260314-56139f05.md  20260314-58567265.md  20260314-619ba42a.md  20260314-861c54c5.md  20260314-936e5833.md  20260314-950b50f1.md  20260314-e7cbbd45.md  20260314-f665d6fc.md  20260314-fa13226f.md  20260315-5a638582.md  20260315-6e78deac.md  20260315-7d170ea7.md  20260315-7f3cc157.md  20260315-8ac94635.md  20260315-a07af5eb.md  20260315-a7de060f.md  20260315-ce269568.md  20260315-e418d474.md
docs/thoughts/: 1.md
schemas/: execution.schema.json  plan.schema.json  review.schema.json
skills/workflow-trace-calculus/: SKILL.md
src/agent_system_coding/: __init__.py  cli.py  codex_cli.py  monitor.py  prompts.py  tracing.py  visualization.py  workflow.py
(+69 files in other folders)
