[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system-coding"
version = "0.1.0"
description = "Minimal LangGraph + Codex CLI MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=1.1.0,<2.0.0",
  "pydantic>=2.12.0,<3.0.0",
]

[project.scripts]
agent-system-coding = "agent_system_coding.cli:main"
agent-system-coding-monitor = "agent_system_coding.monitor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_system_coding.monitoring = ["*.html", "*.css", "*.js"]
